# ParaCL

./: .clang-format  .cppcheck-suppress  .gitignore  CMakeLists.txt  README.md  main.cpp
.github/workflows/: ci.yml
examples/: arithm.pcl  basic_for.pcl  bubble_sort.pcl  calculus.pcl  cmp.pcl  complex_assignment.pcl  complex_logic.pcl  discriminant.pcl  euclid.pcl  factorial.pcl  fibonacci.pcl  if_else.pcl  if_in_if.pcl  input_while.pcl  logic.pcl  max_min.pcl  only_cond_for.pcl  print_i.pcl  print_input.pcl  scope.pcl  simple_assignment.pcl  simple_input.pcl  uop.pcl  while.pcl  while_input.pcl
flags/: CMakeLists.txt
include/: AST.hpp  DotVisitor.hpp  Interpreter.hpp  Visitor.hpp  driver.hpp
include/AST/: AST.hpp  SourceRange.hpp
include/Visitors/: DotVisitor.hpp  Interpreter.hpp  SemanticChecker.hpp  Visitor.hpp
include/Visitors/detail/: ScopeGuard.hpp  VarTable.hpp
include/driver/: driver.hpp  location_utils.hpp  scanner_location_bridge.hpp
include/driver/detail/: SymbolTable.hpp
include/errors-output/: error-formatter.hpp
src/: CMakeLists.txt  main.cpp
src/interpeter/: Interpreter.cpp  SemanticChecker.cpp
src/interpeter/detail/: ScopeGuard.cpp  VarTable.cpp
src/parser/: grammar.l  grammar.y  scanner_location_bridge.cpp
test/: CMakeLists.txt  ast_clone_test.cpp  ast_nodes_test.cpp  ast_print_test.cpp  main.cpp
test/AST_tests/: ast_clone_test.cpp  ast_nodes_test.cpp  ast_print_test.cpp  error_formatter_test.cpp
test/Parser_tests/: lexer_test.cpp  parser_test.cpp
test/Visitor_tests/: dot_visitor_test.cpp  interpreter_control_flow_test.cpp  interpreter_expr_errors_test.cpp  interpreter_expr_test.cpp  interpreter_runtime_validation_test.cpp  interpreter_short_circuit_test.cpp  interpreter_stmt_test.cpp
test/e2e/: run_e2e.py
test/e2e/invalid_progs/: bad_input.ans  bad_input.pcl  division_by_zero.ans  division_by_zero.pcl  missing_if_cond.ans  missing_if_cond.pcl  missing_print_expr.ans  missing_semicolon.ans  redeclare.ans  redeclare.pcl  undefined_var.ans
test/e2e/valid_progs/: arithm.ans  arithm.pcl  basic_for.pcl  bubble_sort.pcl  calculus.pcl  cmp.pcl  complex_assignment.pcl  complex_logic.pcl  discriminant.pcl  empty_while_body.pcl  euclid.pcl  factorial.pcl  fibonacci.pcl  if_else.pcl  if_in_if.pcl  logic.pcl  max_min.pcl  only_cond_for.pcl  print_i.pcl  print_input.pcl  scope.pcl  simple_assignment.pcl  simple_input.pcl  uop.ans  uop.pcl  while.pcl  while_input.pcl  while_with_new_var.ans  while_with_new_var.pcl
